--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,8 +12,8 @@ body {
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
   background-color: #f1f5f9;
-}
-
+  color: #213547;
+  }
 
 .custom-header {
   position: sticky;
